# grpc-proxy

./: .gitmodules  Makefile
client/: .gitignore  Makefile
client/ChatClient/: ChatClientApp.swift  ChatService.swift  ChatViewModel.swift  Connectivity.swift  ContentView.swift  IosConnectivityImpl.swift  WatchChatService.swift
client/ChatClient.xcodeproj/: project.pbxproj
client/ChatClient.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
client/ChatClient.xcodeproj/project.xcworkspace/xcuserdata/mrincredible.xcuserdatad/: UserInterfaceState.xcuserstate
client/ChatClient.xcodeproj/xcshareddata/xcschemes/: ChatClient.xcscheme  WatchChatClient Watch App.xcscheme
client/ChatClient.xcodeproj/xcuserdata/mrincredible.xcuserdatad/xcschemes/: xcschememanagement.plist
client/ChatClient/ChatClient/: ContentView.swift
client/ChatClient/ChatClient.xcodeproj/: project.pbxproj
client/ChatClient/ChatClient/protos/: Makefile  chat.proto
client/WatchChatClient/: ContentView.swift  ExtensionDelegate.swift  WatchChat.swift  WatchChatClientApp.swift  WatchChatViewModel.swift  WatchConnectivityImpl.swift
server/: .gitignore  CMakeLists.txt  Makefile  build.sh
server/protos/: Makefile  chat.proto
server/src/: main.cpp
